<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/main"
            android:textColor="@color/var_black"
            android:textSize="18sp" />
    </FrameLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:visibility="gone">

        <include layout="@layout/data_placeholder_layout" />
    </com.facebook.shimmer.ShimmerFrameLayout>

    <FrameLayout
        android:id="@+id/home_retry_icon_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/home_retry_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:src="@drawable/ic_baseline_refresh_24"
            app:tint="@color/var_black" />

    </FrameLayout>

    <ScrollView
        android:id="@+id/home_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".fragment.home.HomeFragment">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="225dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:elevation="16dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/home_card_number_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginEnd="32dp"
                        android:fontFamily="@font/roboto_medium"
                        android:textColor="@color/var_black"
                        android:textSize="22sp"
                        app:layout_constraintBottom_toBottomOf="@+id/home_bank_type_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/home_bank_type_image"
                        app:layout_constraintTop_toTopOf="@+id/home_bank_type_image"
                        tools:text="4455 1223 3488 1000" />

                    <ImageView
                        android:id="@+id/home_bank_type_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="32dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@drawable/ic_mastercard_icon" />

                    <ImageView
                        android:id="@+id/home_avatar_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="33dp"
                        android:src="@drawable/ic_generic_avatar"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/home_bank_type_image" />

                    <TextView
                        android:id="@+id/home_cardholder_name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/gray"
                        android:textSize="17sp"
                        app:layout_constraintBottom_toBottomOf="@+id/home_avatar_image"
                        app:layout_constraintStart_toEndOf="@+id/home_avatar_image"
                        app:layout_constraintTop_toTopOf="@+id/home_avatar_image"
                        tools:text="Anton Ivanov" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="22dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/valid_thru"
                        android:textAllCaps="true"
                        android:textColor="@color/gray"
                        android:textSize="8sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/home_card_number_text" />

                    <TextView
                        android:id="@+id/home_valid_thru_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/gray"
                        android:textSize="17sp"
                        app:layout_constraintEnd_toEndOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"
                        tools:text="12/22" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="21dp"
                        android:layout_marginEnd="22dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/your_balance"
                        android:textColor="@color/gray"
                        android:textSize="13sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/home_valid_thru_text" />

                    <TextView
                        android:id="@+id/home_balance_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="22dp"
                        android:fontFamily="@font/roboto_medium"
                        android:textColor="@color/var_black"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5"
                        tools:text="$2 617.14" />

                    <TextView
                        android:id="@+id/home_currency_balance_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="35dp"
                        android:fontFamily="@font/roboto_medium"
                        android:textColor="@color/var_black"
                        android:textSize="28sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/home_avatar_image"
                        tools:text="£2 125,12" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/change_currency"
                android:textColor="@color/var_black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />


            <Button
                android:id="@+id/gbp_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/currency_button_shape_unselected"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/gbp"
                android:textSize="16sp"
                app:icon="@drawable/ic_pound"
                app:iconGravity="textTop"
                app:iconPadding="16dp"
                app:layout_constraintEnd_toStartOf="@+id/eur_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />


            <Button
                android:id="@+id/eur_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/currency_button_shape_unselected"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/eur"
                android:textSize="16sp"
                app:icon="@drawable/ic_euro"
                app:iconGravity="textTop"
                app:iconPadding="16dp"
                app:layout_constraintEnd_toStartOf="@+id/rub_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/gbp_button"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />


            <Button
                android:id="@+id/rub_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/currency_button_shape_unselected"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/rub"
                android:textSize="16sp"
                app:icon="@drawable/ic_ruble"
                app:iconGravity="textTop"
                app:iconPadding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/eur_button"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="264dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:elevation="16dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eur_button">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/history"
                        android:textColor="@color/var_black"
                        android:textSize="17sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/home_transaction_history_list"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="22dp"
                        android:layout_marginEnd="22dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView13"
                        tools:itemCount="4"
                        tools:listitem="@layout/transactions_history_item" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
